updated to version 0.3; added delayed job capability; added abstract class for simple static calls

--- a/README
+++ b/README
@@ -1,14 +1,34 @@
-A simple PHP client for RESTful Metrics. See http://www.restfulmetrics.com
+RestfulMetrics-php v0.3
+=======================
+A simple PHP library for RESTful Metrics. See http://www.restfulmetrics.com
 
-NOTE: 
-There are a few class constants in Client.php that can be used for configuration purposes. 
+SETUP AND CONFIGURATION: 
 
-USAGE:
+1) Adjust the class constants in the base RestfulMetrics class as needed. 
+
+2) Run the setup.sql queries to initialize your database tables for delayed jobs. 
+   Make sure to adjust the table names if you want to use non-default prefixes.
+
+
+BASIC USAGE:
+
+RestfulMetrics::setup("API_KEY", "APP_ID");
+RestfulMetrics::asynchronous(new PDO("DSN_STRING"));
+
+RestfulMetrics::addMetric("simple_metric", 1);
+RestfulMetrics::addMetric("compound_metric", array("foo", "bar");
+
+
+ALTERNATE/VERBOSE USAGE:
 
 require '[PATH/TO]/RestfulMetrics/Client.php';
 $rm = new RestfulMetrics_Client([APIKEY], [APP_ID]);
 $rm->addMetric("simple", 1);
 $rm->addMetric("compound", array("a", "b", "c"));
 
-VERSION:
-0.2
+
+ASYNCHRONOUS EXECUTION VIA DELAYED JOBS:
+
+RestfulMetrics::setup("API_KEY", "APP_ID");
+RestfulMetrics::asynchronous(new PDO("DSN_STRING"));
+RestfulMetrics::runDelayedJobs();
